<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">OnionChef</string>
    <string name="button_submit">Submit</string>
    <string name="button_fblogin">LogIn with Facebook</string>
    <string name="button_oclogin">LogIn with OnionChef</string>
    <string name="label_register">Register</string>
    <string name="image_tagline">image_tagline</string>
    <string name="input_name_hint">Name</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="label_login">LogIn</string>
    <string name="button_forgotpassword">Forgot my password!</string>
    <string name="button_login">LogIn</string>
    <string name="button_back">button_back</string>
    <string name="image_main_bar">image_main_bar</string>
    <string name="button_profile">button_profile</string>
    <string name="button_refresh">button_refresh</string>
    <string name="label_currentlocation">Rough Location: </string>
    <string name="image_box_top">image_box_top</string>
    <string name="image_box_mid">image_box_mid</string>
    <string name="image_box_bot">image_box_bot</string>
    <string name="label_restaurantsnearyou">Restaurants near you</string>
    <string name="label_pleaseselect">Please Select</string>
    <string name="image_frame_restaurant_logo">image_frame_restaurant_logo</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="purple">#6D2B87</color>
    <string name="image_box">image_box</string>
    <string name="image_ad">image_ad</string>
    <string name="button_checkin">Check In!</string>
    <string name="lable_mostpopular">Most Popular</string>
    <string name="image_dishbig">image_dishbig</string>
    <string name="button_user">button_user</string>
    <string name="button_chef">button_chef</string>
    <string name="button_discover">button_discover</string>
    <string name="image_dish">image_dish</string>
    <string name="button_upload_pic">button_upload_pic</string>
    <string name="button_favourite">button_favourite</string>
    <string name="image_scroll_bar">image_scroll_bar</string>
    <string name="image_rate">image_rate</string>
    <string name="button_editprofile">Edit Profile</string>
    <string name="image_profilepic">image_profilepic</string>
    <string name="label_aboutme">About Me</string>
    <string name="label_homelocation">"City: "</string>
    <string name="label_age">"Age: "</string>
    <string name="label_favourites">Favourites</string>
    <string name="image_favboxtop">image_favboxtop</string>
    <string name="image_favboxmid">image_favboxmid</string>
    <string name="image_favboxbot">image_favboxbot</string>
    <string name="label_recommendedby">"Reccomended by: "</string>
    <string name="button_forward">button_forward</string>
    <string name="image_picpreview">image_picpreview</string>
    <string name="image_oclogo">image_oclogo</string>
    <string name="label_DishName">Dish Name</string>
    <string name="label_rate">Rate it!</string>
    <string name="label_comment">Comment</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ratecomment">Rate/Comment</string>
    <string name="input_dishname_hint">What is this?</string>
    <string name="input_comment_hint">Share your food-back</string>
    <string name="image_box_tabsmall">image_box_tabsmall</string>
    <string name="image_box_tab">image_box_tab</string>
    <string name="button_useraction">button_useraction</string>
    <string name="label_othersubmissions">Other submissions here</string>
    <string name="input_aboutme_hint">Boast about yourself! Now\'s the chance!</string>
      
</resources>