<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/white">

    <ImageView
        android:id="@+id/image_Tagline"
        android:layout_height= "100dp"
        android:layout_width="fill_parent"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_tagline" />

 	<Button
 	    android:id="@+id/button_FBLogIn"
 	    android:layout_width="160dp"
 	    android:layout_height="40dp"
 	    android:layout_below="@+id/image_Tagline"
 	    android:layout_centerHorizontal="true"
 	    android:text="@string/button_fblogin" />

    <Button
        android:id="@+id/button_OCLogIn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/button_FBLogIn"
        android:layout_centerHorizontal="true"
        android:text="@string/button_oclogin" />

    <ImageView
        android:id="@+id/image_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_OCLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/box" />
   	<TextView
	    android:id="@+id/label_Register"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/image_Box"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="5dp"
	    android:text="@string/label_register"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/white" />

    <EditText
        android:id="@+id/input_Name"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_Register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:inputType="text"
        android:hint="@string/input_name_hint" />

    <EditText
        android:id="@+id/input_Email"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_Name"
        android:layout_below="@+id/input_Name"
        android:layout_marginTop="15dp"
        android:hint="@string/input_email_hint"
        android:singleLine="true"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_Password"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_Email"
        android:layout_below="@+id/input_Email"
        android:layout_marginTop="15dp"
        android:hint="@string/input_password_hint"
        android:singleLine="true"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_Submit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/input_Password"
        android:layout_below="@+id/input_Password"
        android:layout_marginTop="15dp"
        android:text="@string/button_submit" />
 
</RelativeLayout>